rhai/codegen/ui_tests/rhai_mod_missing_value.stderr
error: requires value
  --> $DIR/rhai_mod_missing_value.rs:11:12
   |
11 | #[rhai_mod(name)]
   |            ^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_mod_missing_value.rs:24:8
   |
24 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
